use packages permissions

--- a/Templates/AppSource App/.github/workflows/CICD.yaml
+++ b/Templates/AppSource App/.github/workflows/CICD.yaml
@@ -16,6 +16,7 @@ defaults:
 permissions:
   contents: read
   actions: read
+  packages: read
 
 env:
   workflowDepth: 1
@@ -263,6 +264,10 @@ jobs:
       fail-fast: false
     runs-on: [ windows-latest ]
     name: Deliver to ${{ matrix.deliveryTarget }}
+    permissions:
+      contents: read
+      actions: read
+      packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
