--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -40,6 +40,7 @@ jobs:
       projectDependenciesJson: ${{ steps.determineProjectsToBuild.outputs.ProjectDependenciesJson }}
       buildOrderJson: ${{ steps.determineProjectsToBuild.outputs.BuildOrderJson }}
       workflowDepth: ${{ steps.DetermineWorkflowDepth.outputs.WorkflowDepth }}
+      publishArtifacts: ${{ steps.DeterminePublishArtifacts.outputs.PublishArtifacts }}
     steps:
       - name: Dump Workflow Information
         uses: microsoft/AL-Go-Actions/DumpWorkflowInfo@main
@@ -63,7 +64,7 @@ jobs:
         uses: microsoft/AL-Go-Actions/ReadSettings@main
         with:
           shell: powershell
-          get: type
+          get: type, CICDPushBranches
 
       - name: Determine Workflow Depth
         id: DetermineWorkflowDepth
@@ -113,6 +114,25 @@ jobs:
           getEnvironments: '*'
           type: 'CD'
 
+      - name: Determine Publish Artifacts
+        id: DeterminePublishArtifacts
+        run: |
+          $publishArtifacts = $false
+          $pushBranches = $env:CICDPushBranches | ConvertFrom-Json
+          $currentBranch = $env:GITHUB_REFNAME
+          foreach($pushBranch in $pushBranches) {
+            if($currentBranch -like $pushBranch) {
+              $publishArtifacts = $true
+              break
+            }
+          }
+          $deliveryTargets = ${{ steps.DetermineDeliveryTargets.outputs.DeliveryTargetsJson }} | ConvertFrom-Json
+          $environmentCount = ${{ steps.DetermineDeploymentEnvironments.outputs.EnvironmentCount }}
+
+          $publishArtifacts = $publishArtifacts || $deliveryTargets.Count -gt 0 || $environmentCount -gt 0
+          Add-Content -Encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "PublishArtifacts=$publishArtifacts"
+          Write-Host "PublishArtifacts=$publishArtifacts"
+
   CheckForUpdates:
     needs: [ Initialization ]
     runs-on: [ windows-latest ]
@@ -153,7 +173,7 @@ jobs:
       projectDependenciesJson: ${{ needs.Initialization.outputs.projectDependenciesJson }}
       secrets: 'licenseFileUrl,codeSignCertificateUrl,*codeSignCertificatePassword,keyVaultCertificateUrl,*keyVaultCertificatePassword,keyVaultClientId,gitHubPackagesContext,applicationInsightsConnectionString'
       publishThisBuildArtifacts: ${{ needs.Initialization.outputs.workflowDepth > 1 }}
-      publishArtifacts: ${{ github.ref_name == 'main' || startswith(github.ref_name, 'release/') || needs.Initialization.outputs.deliveryTargetsJson != '[]' || needs.Initialization.outputs.environmentCount > 0 }}
+      publishArtifacts: ${{ needs.Initialization.outputs.PublishArtifacts -eq 'true' }}
       signArtifacts: true
       useArtifactCache: true
 
