--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -119,7 +119,10 @@ jobs:
         run: |
           $publishArtifacts = $false
           $pushBranches = $env:CICDPushBranches | ConvertFrom-Json
-          $currentBranch = $env:GITHUB_REFNAME
+          $currentBranch = $env:GITHUB_REF_NAME
+
+          Write-Host "Current branch: $currentBranch"
+
           foreach($pushBranch in $pushBranches) {
             if($currentBranch -like $pushBranch) {
               $publishArtifacts = $true
