Update Templates/Per Tenant Extension/.github/workflows/CreateRelease.yaml
Co-authored-by: Alexander Holstrup <117829001+aholstrup1@users.noreply.github.com>

--- a/Templates/Per Tenant Extension/.github/workflows/CreateRelease.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateRelease.yaml
@@ -28,7 +28,7 @@ on:
         type: boolean
         default: false
       releaseBranchPrefix:
-        description: The preffix for the release branch. Used only if 'Create Release Branch?' is checked.
+        description: The prefix for the release branch. Used only if 'Create Release Branch?' is checked.
         type: string
         default: release/
       updateVersionNumber:
