--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -40,7 +40,6 @@ jobs:
       projectDependenciesJson: ${{ steps.determineProjectsToBuild.outputs.ProjectDependenciesJson }}
       buildOrderJson: ${{ steps.determineProjectsToBuild.outputs.BuildOrderJson }}
       workflowDepth: ${{ steps.DetermineWorkflowDepth.outputs.WorkflowDepth }}
-      publishArtifacts: ${{ steps.DeterminePublishArtifacts.outputs.PublishArtifacts }}
     steps:
       - name: Dump Workflow Information
         uses: microsoft/AL-Go-Actions/DumpWorkflowInfo@main
@@ -64,7 +63,7 @@ jobs:
         uses: microsoft/AL-Go-Actions/ReadSettings@main
         with:
           shell: powershell
-          get: type, CICDPushBranches
+          get: type
 
       - name: Determine Workflow Depth
         id: DetermineWorkflowDepth
@@ -114,28 +113,6 @@ jobs:
           getEnvironments: '*'
           type: 'CD'
 
-      - name: Determine Publish Artifacts
-        id: DeterminePublishArtifacts
-        run: |
-          $publishArtifacts = $false
-          $pushBranches = $env:CICDPushBranches | ConvertFrom-Json
-          $currentBranch = $env:GITHUB_REF_NAME
-
-          Write-Host "Current branch: $currentBranch"
-
-          foreach($pushBranch in $pushBranches) {
-            if($currentBranch -like $pushBranch) {
-              $publishArtifacts = $true
-              break
-            }
-          }
-          $deliveryTargets = "${{ steps.DetermineDeliveryTargets.outputs.DeliveryTargetsJson }}"
-          $environmentCount = ${{ steps.DetermineDeploymentEnvironments.outputs.EnvironmentCount }}
-
-          $publishArtifacts = $publishArtifacts -or ($deliveryTargets -ne '[]') -or ($environmentCount -gt 0)
-          Add-Content -Encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "PublishArtifacts=$publishArtifacts"
-          Write-Host "PublishArtifacts=$publishArtifacts"
-
   CheckForUpdates:
     needs: [ Initialization ]
     runs-on: [ windows-latest ]
@@ -176,7 +153,7 @@ jobs:
       projectDependenciesJson: ${{ needs.Initialization.outputs.projectDependenciesJson }}
       secrets: 'licenseFileUrl,codeSignCertificateUrl,*codeSignCertificatePassword,keyVaultCertificateUrl,*keyVaultCertificatePassword,keyVaultClientId,gitHubPackagesContext,applicationInsightsConnectionString'
       publishThisBuildArtifacts: ${{ needs.Initialization.outputs.workflowDepth > 1 }}
-      publishArtifacts: ${{ needs.Initialization.outputs.PublishArtifacts == 'True' }}
+      publishArtifacts: ${{ github.ref_name == 'main' || startswith(github.ref_name, 'release/') || startswith(github.ref_name, 'releases/') || needs.Initialization.outputs.deliveryTargetsJson != '[]' || needs.Initialization.outputs.environmentCount > 0 }}
       signArtifacts: true
       useArtifactCache: true
 
