--- a/Templates/Per Tenant Extension/.github/workflows/_BuildALGoProject.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/_BuildALGoProject.yaml
@@ -110,7 +110,6 @@ jobs:
       - name: Determine Source Type
         env:
           project: ${{ inputs.project }}
-        shell: ${{ inputs.shell }}
         run: |
           if ($env:powerPlatformSolutionFolder -eq $env:project) {
             $sourceType = 'PP'
@@ -129,7 +128,7 @@ jobs:
           project: ${{ inputs.project }}
 
       - name: Cache Business Central Artifacts
-        if: env.useCompilerFolder == 'True' && inputs.useArtifactCache && env.artifactCacheKey && $env.sourceType == 'AL'
+        if: env.useCompilerFolder == 'True' && inputs.useArtifactCache && env.artifactCacheKey && env.sourceType == 'AL'
         uses: actions/cache@v4
         with:
           path: .artifactcache
